<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:orientation="vertical"
    android:background="@color/blue">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnProfilePic"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btnProfilePic"
        android:textSize="22sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnPersonalInfo"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_personal_details"
        android:textSize="22sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSummary"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_summary"
        android:textSize="22sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEducation"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_education"
        android:textSize="22sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnExperience"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_experience"
        android:textSize="22sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCertification"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_certification"
        android:textSize="22sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnReferences"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_references"
        android:textSize="22sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPreviewCV"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:text="@string/btn_preview_cv"
        android:textSize="22sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        
        />

</LinearLayout>